--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Andrea Barghiginani # your name (or website title) here
 logo: "/images/andrea-barghigiani-web.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Front End WordPress Developer
+  <h4>Front End WordPress Developer</h4>
   <br><br>
   Passione e dedizione al tuo servizio
   <br><br>
-  <a href="https://www.linkedin.com/in/andreabarghigiani/">LinkedIn</a> 
+  <a href="https://www.linkedin.com/in/andreabarghigiani/">LinkedIn</a>
 
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
