--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,10 @@ title: Andrea Barghiginani # your name (or website title) here
 logo: "/images/andrea-barghigiani-web.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <h4>Front End WordPress Developer</h4>
-  Passione e dedizione al tuo servizio
-  <br><br>
+  <p>10+ years of experience building the web</p>
+  <br>
   <a href="https://www.linkedin.com/in/andreabarghigiani/">LinkedIn</a>
+  <a href="/about">Su di me</a>
 
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
